--- a/packages/documentation/docs/migration/2_0_0.md
+++ b/packages/documentation/docs/migration/2_0_0.md
@@ -4,6 +4,21 @@ sidebar_title: Migration to 2.0.0
 title: Migration to 2.0.0
 ---
 
+# ix-menu
+
+## Item dropdown overflow is removed
+
+We replaced the overflow menu with second level navigation in form of categories
+
+```tsx
+<ix-menu-category label="AI Configuration" icon="rocket">
+  <ix-menu-item>Nested Item 1</ix-menu-item>
+  <ix-menu-item>Nested Item 2</ix-menu-item>
+</ix-menu-category>
+```
+
+If the menu stills overflow the bottom of the menu a scroll container will be displayed.
+
 # ix-menu-about and ix-menu-settings
 
-Event changed from `CustomEvent<PointerEvent>` to `CustomEvent<string>`
+Event changed from `CustomEvent<PointerEvent>` to `CustomEvent<{ nativeEvent: MouseEvent, name: string }}>`
