test: update snapshots

--- a/packages/documentation/docs/migration/2_0_0.md
+++ b/packages/documentation/docs/migration/2_0_0.md
@@ -19,6 +19,22 @@ We replaced the overflow menu with second level navigation in form of categories
 
 If the menu stills overflow the bottom of the menu a scroll container will be displayed.
 
+## Multiple screen layouts
+
+The `ix-basic-navigation` in combination of the `ix-menu` comes with 3 layout formats:
+
+```typescript
+const smallMediaQuery = `only screen and (max-width: 480px)`;
+const mediumMediaQuery = `only screen and (min-width: 480px) and (max-width: 1024px)`;
+const largeMediaQuery = `only screen and (min-width: 1024px)`;
+```
+
+You can force the old behavior by setting the `supportedModes` to `['small', 'medium']` e.g
+
+```tsx
+<ix-menu supportedModes={['small', 'medium']}>
+```
+
 # ix-menu-about and ix-menu-settings
 
 Event changed from `CustomEvent<PointerEvent>` to `CustomEvent<{ nativeEvent: MouseEvent, name: string }}>`
